# AI-virtual-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirement.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: CallDetail.tsx  Calls.tsx  Dashboard.tsx  Settings.tsx  Voices.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: config.py  main.py
src/agents/: phone_agent.py
src/api/v1/: calls.py  dashboard.py  voices.py
src/api/webhooks/: twilio.py
src/core/: exceptions.py  logging.py  security.py
src/db/: session.py
src/db/migrations/: env.py
src/models/: base.py  call.py  conversation.py  user.py  voice_profile.py
src/schemas/: call.py  conversation.py  voice.py  webhook.py
src/services/ai/: openai_service.py
src/services/phone/: call_handler.py  twilio_service.py
src/services/voice/: elevenlabs_service.py
